kubernetes/apps/system/unifi/nap/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi-network-application
  namespace: system
subsets:
  - addresses:
      - ip: 192.168.1.3
      - ip: 192.168.1.5
    ports:
      - port: 8443
