kubernetes/apps/system/unifi/nap/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-network-application
  namespace: system
  annotations:
    coredns.io/hostname: "unifi-controller.${SECRET_DOMAIN}"
    io.cilium/lb-ipam-ips: "192.168.40.9"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
    - protocol: TCP
      port: 8443
      name: admin
    - protocol: TCP
      port: 8080
      name: controller
    - protocol: TCP
      port: 8880
      name: portal-http
    - protocol: TCP
      port: 8843
      name: portal-https
    - protocol: TCP
      port: 6789
      name: speedtest
    - protocol: UDP
      port: 3478
      name: stun
    - protocol: UDP
      port: 5514
      name: syslog
    - protocol: UDP
      port: 10001
      name: discovery
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi-network-application
  namespace: system
subsets:
  - addresses:
      - ip: 192.168.1.3
      - ip: 192.168.1.5
    ports:
      - port: 8443
        protocol: TCP
        name: admin
