kubernetes/apps/system/unifi/nap/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: unifi-network-application
  namespace: system
spec:
  ingressClassName: nginx-internal
  rules:
    - host: &host unifi.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi-network-application
                port:
                  number: 8443
  tls:
    - hosts:
        - *host
      secretName: wildcard-cert-tls
